--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^10.13.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
