--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.20.2",
+    "canvas-to-blob": "^1.0.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
