--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
