--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5"
   },
