--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,8 +12,9 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.0",
-    "html2pdf": "^0.0.11",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
